# TermDeck

./: .gitignore  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: release.yml
design/: Terminal Dashboard.dc.html
docs/superpowers/plans/: 2026-07-09-sftp-edit-clipboard.md
docs/superpowers/specs/: 2026-07-09-sftp-edit-clipboard-design.md
src/: App.tsx  dnd.ts  fontSizes.ts  i18n.ts  layouts.ts  main.tsx  shells.ts  terminalHolder.ts  types.ts  useNow.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  cursor.rs  edit.rs  lib.rs  main.rs  pty.rs  shells.rs  ssh.rs
src/components/: ClaudeIcon.tsx  ClaudePanel.tsx  ClaudeSessionsDialog.tsx  ContextMenu.tsx  CursorIcon.tsx  FileBrowser.tsx  FilePanel.tsx  Grid.tsx  KeepAliveTerminal.tsx  Pane.tsx  PresetIcon.tsx  PropertiesDialog.tsx  ShellBadge.tsx  Sidebar.tsx  StatusBar.tsx  TabStrip.tsx  TerminalLayer.tsx  TitleBar.tsx  Toolbar.tsx  icons.tsx  pathUtils.ts  sync.ts  transfer.ts
src/dialogs/: AddCmdDialog.tsx
src/ipc/: api.ts  backup.ts  claude.ts  clipboard.ts  cursor.ts  edit.ts  env.ts  persist.ts  pty.ts  session.ts  ssh.ts  update.ts
src/settings/: SettingsWindow.tsx
src/state/: activity.ts  edits.ts  slots.ts  store.ts
src/theme/: tokens.css
