[package]
name = "xcmd"
version = "0.1.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xcmd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2.4.3"
sysinfo = "0.39.5"
tauri-plugin-opener = "2.5.4"
tauri-plugin-clipboard-manager = "2"
ureq = "3.3.0"
base64 = "0.22"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }

# ssh2 uses WinCNG on Windows (no OpenSSL); elsewhere build a vendored OpenSSL.
[target.'cfg(windows)'.dependencies]
ssh2 = "0.9"

[target.'cfg(not(windows))'.dependencies]
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

